ADMIN E CLIENTE DAO INICIO DO VER CARRINHO

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Matter - Construcao</title>
 </head>
 <body>
-$END$
+
+<h1>Acesse a area do Cliente:</h1>
+<form method="get" action="http://localhost:8080/cliente">
+    <button> Clique aqui !</button>
+</form><br/>
+<br/>
+<h1>Acesse a area do Administrador:</h1>
+<form method="get" action="http://localhost:8080/admin">
+    <button> Clique aqui !</button>
+</form><br/>
+
+
 </body>
 </html>
