--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,12 +7,12 @@
 <body>
 
 <h1>Acesse a area do Cliente:</h1>
-<form method="get" action="http://localhost:8080/cliente">
+<form method="get" action="/cliente">
     <button> Clique aqui !</button>
 </form><br/>
 <br/>
 <h1>Acesse a area do Administrador:</h1>
-<form method="get" action="http://localhost:8080/admin">
+<form method="get" action="/admin">
     <button> Clique aqui !</button>
 </form><br/>
 
